--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,21 @@
-
+{
+  "name": "降ってくる単位を獲得せよ",
+  "short_name": "単位獲得ゲーム",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#d3eaf2",
+  "theme_color": "#3498db",
+  "description": "上から降ってくる単位をゲットするシンプルなゲームです。",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
